--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,18 @@ processing_unit:
   window_duration: 30    # Duración de la ventana en segundos
 
 event_generator:
-  lambda: 0.3     # Tasa de llegada (valor de lambda),(por ejemplo, 0.3 para alta carga; prueba 0.05 para baja, 0.1 para media)
-  generators_per_unit: 100  # Número de generadores por unidad
+  lambda: 0.1         # Tasa de llegada para eventos (0.3 alta, 0.1 media, 0.05 baja)
+  generators_per_unit: 100 # Número de generadores por unidad
+
+inference_generator:
+  lambda: 0.1         # Tasa de generación para inferencias (distribución exponencial)
+  generators_per_unit: 100  # Número de generadores de inferencias por unidad
 
 simmulation:
-  duration: 100         # Duración total de la simulación en segundos
+  duration: 3000     # Duración total de la simulación en segundos
+  Tunit: 10            # Unidad mínima de tiempo para generación de eventos e inferencias
+  OW: 120              # Duración de la ventana de observación
+  PW: 10               # Duración de la ventana de predicción
+  LT: 20               # Lead time (tiempo entre OW y PW)
+  MIT: 10              # Máximo número de inferencias permitidas por Tunit
+
